# selent-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: branch-protection.yml  docker-deploy.yml  docker-publish.yml  push-validation.yml
docs/: COMPLIANCE_TOOLS.md
scripts/: generate_collection.py
selent_mcp/: __init__.py  __main__.py  main.py  mcp.py  prompts.py  schemas.py  settings.py
selent_mcp/prompts/: meraki_api_workflow.txt  multi_key_startup_guide.txt  multi_key_workflow.txt  parameter_examples_guide.txt  parameters_guide.txt  search_endpoints_guide.txt  troubleshooting_guide.txt
selent_mcp/services/: meraki_client.py  meraki_multi_client.py  selent_service_client.py
selent_mcp/tools/: commonly_used_api_tools.py  key_management_tools.py  meraki_api_tools.py  meraki_complex_api_tools.py  selent_api_tools.py
